--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="node_modules\font-awesome\fonts\fontawesome-webfont.ttf">
+    <link rel="stylesheet" href="node_modules\font-awesome\fonts\fontawesome-webfont.woff">
+    <link rel="stylesheet" href="node_modules\font-awesome\fonts\fontawesome-webfont.woff2"> -->
+    
 </head>
 <body>
+        <i class="fa fa-flag"></i>
     <div id="root">
         
     </div>
